k8s/apps/matrix/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matrix
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
    nginx.ingress.kubernetes.io/proxy-body-size: "256M"
spec:
  tls:
    - secretName: tls-meowtrix.lly.sh
      hosts:
        - meowtrix.lly.sh
        - synapse.meowtrix.lly.sh
  rules:
    # element web client
    - host: meowtrix.lly.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: element-web
                port:
                  name: http


    # homeserver
    - host: synapse.meowtrix.lly.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: synapse
                port:
                  name: http
